--- a/app/design/adminhtml/default/default/template/cms/browser/js.phtml
+++ b/app/design/adminhtml/default/default/template/cms/browser/js.phtml
@@ -19,4 +19,5 @@
 <script>
 MediabrowserInstance = new Mediabrowser(<?= $this->getFilebrowserSetupObject() ?>);
 MediabrowserInstance.storeId = '<?= $this->getStoreId() ?>';
+MediabrowserInstance.initializeEventListeners();
 </script>
