--- a/app/design/adminhtml/default/default/template/importexport/export/form/after.phtml
+++ b/app/design/adminhtml/default/default/template/importexport/export/form/after.phtml
@@ -25,6 +25,6 @@
 </div>
 <script type="text/javascript">
 //<![CDATA[
-   $('entity').selectedIndex = 0; // forced resetting entity selector after page refresh
+   document.getElementById('entity').selectedIndex = 0; // forced resetting entity selector after page refresh
 //]]>
 </script>
