--- a/app/design/adminhtml/default/default/template/api2/permissions/user/edit/tab/roles/js.phtml
+++ b/app/design/adminhtml/default/default/template/api2/permissions/user/edit/tab/roles/js.phtml
@@ -19,12 +19,12 @@ var activeRestRole = getActiveRestRole();
 /* Retrieve current active rest role */
 function getActiveRestRole() {
     var role;
-    api2_roles_sectionJsObject.rows.each(function(row) {
-        var radiobox = $(row).getElementsByClassName('radio')[0];
+    for (const row of api2_roles_sectionJsObject.rows) {
+        var radiobox = row.getElementsByClassName('radio')[0];
         if ('undefined' != typeof radiobox && radiobox.checked) {
             role = radiobox;
         }
-    });
+    }
     return role;
 }
 
