--- a/app/design/adminhtml/default/default/template/bundle/product/edit/bundle.phtml
+++ b/app/design/adminhtml/default/default/template/bundle/product/edit/bundle.phtml
@@ -51,15 +51,15 @@ if(typeof Bundle=='undefined') {
 // re-bind form elements onchange
 varienWindowOnload(true);
 <?php if ($this->isReadonly()):?>
-$('product_bundle_container').select('input', 'select', 'textarea', 'button').each(function(input){
+document.getElementById('product_bundle_container').querySelectorAll('input, select, textarea, button').forEach(function(input){
     input.disabled = true;
     if (input.tagName.toLowerCase() == 'button') {
-        input.addClassName('disabled');
+        input.classList.add('disabled');
     }
 });
 <?php endif ?>
 Validation.add('validate-greater-zero-based-on-option', '<?= $this->jsQuoteEscape($this->__('Please enter a number greater 0 in this field.')) ?>', function(v, el) {
-    var optionType = $(el).up('div.grid').previous('table.option-header').select('select.select-product-option-type')[0],
+    var optionType = el.closest('div.grid').previousElementSibling.querySelector('select.select-product-option-type'),
         v = Number(v) || 0;
 
     if (optionType && (optionType.value == 'checkbox' || optionType.value == 'multi') && v <= 0) {
