--- a/app/design/adminhtml/default/default/template/bundle/sales/shipment/view/items/renderer.phtml
+++ b/app/design/adminhtml/default/default/template/bundle/sales/shipment/view/items/renderer.phtml
@@ -16,7 +16,6 @@
 <?php $shipItems = $this->getChilds($_item) ?>
 <?php $_count = count ($items) ?>
 <?php $_index = 0 ?>
-
 <?php $_prevOptionId = '' ?>
 
 <?php if($this->getOrderOptions() || $_item->getDescription()): ?>
@@ -79,9 +78,9 @@
                         <?php if ($_remainder):?>
                             ... <span id="<?= $_id = 'id' . uniqid()?>"><?= $_remainder ?></span>
                             <script type="text/javascript">
-                            $('<?= $_id ?>').hide();
-                            $('<?= $_id ?>').up().observe('mouseover', function(){$('<?= $_id ?>').show();});
-                            $('<?= $_id ?>').up().observe('mouseout',  function(){$('<?= $_id ?>').hide();});
+                            document.getElementById('<?= $_id ?>').style.display = 'none';
+                            document.getElementById('<?= $_id ?>').parentElement.addEventListener('mouseover', function(){document.getElementById('<?= $_id ?>').style.display = '';});
+                            document.getElementById('<?= $_id ?>').parentElement.addEventListener('mouseout',  function(){document.getElementById('<?= $_id ?>').style.display = 'none';});
                             </script>
                         <?php endif ?>
                     <?php endif ?>
