--- a/app/design/adminhtml/default/default/template/catalog/product/edit/options/type/file.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/edit/options/type/file.phtml
@@ -12,7 +12,6 @@
 /** @var Mage_Adminhtml_Block_Catalog_Product_Edit_Tab_Options_Type_File $this */
 ?>
 <script type="text/javascript">
-
 OptionTemplateFile = '<table class="border" cellpadding="0" cellspacing="0">'+
         '<tr class="headings">'+
             <?php if ($this->getCanReadPrice() !== false) : ?>
@@ -41,8 +40,7 @@ OptionTemplateFile = '<table class="border" cellpadding="0" cellspacing="0">'+
         '</tr>'+
     '</table>';
 
-if ($('option_panel_type_file')) {
-    $('option_panel_type_file').remove();
+if (document.getElementById('option_panel_type_file')) {
+    document.getElementById('option_panel_type_file').remove();
 }
-
 </script>
