--- a/app/design/adminhtml/default/default/template/sales/order/create/shipping/method/form.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/shipping/method/form.phtml
@@ -62,14 +62,13 @@
                     (<?= $this->__('Incl. Tax') ?> <?= $_incl ?>)
                 <?php endif ?>
             </strong>
-            <!--input type="text" class="input-text" style="width:70px"/-->
             <br/>
-            <a href="#" onclick="$('order-shipping-method-info').hide();$('order-shipping-method-choose').show();return false">
+            <a href="#" onclick="document.getElementById('order-shipping-method-info').style.display = 'none';document.getElementById('order-shipping-method-choose').style.display = 'block';return false">
                 <?= Mage::helper('sales')->__('Click to change shipping method') ?>
             </a>
         </div>
     <?php else: ?>
-        <script type="text/javascript">$('order-shipping-method-choose').show();</script>
+        <script type="text/javascript">document.getElementById('order-shipping-method-choose').style.display = 'block';</script>
     <?php endif ?>
 <?php elseif($this->getIsRateRequest()): ?>
     <strong><?= Mage::helper('sales')->__('Sorry, no quotes are available for this order at this time.') ?></strong>
