--- a/app/design/adminhtml/default/default/template/sales/order/invoice/create/form.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/invoice/create/form.phtml
@@ -84,10 +84,9 @@
     </div>
 </form>
 <script type="text/javascript">
-//<![CDATA[
-    var createShipment = $('invoice_do_shipment');
+    var createShipment = document.getElementById('invoice_do_shipment');
     if (createShipment) {
-        createShipment.observe('click', function(e){
+        createShipment.addEventListener('click', function(e){
             if (createShipment.checked) {
                 document.getElementById('tracking').style.display = 'block';
             } else {
@@ -98,11 +97,10 @@
 
     /*forced creating of shipment*/
     var forcedShipmentCreate = <?= $this->getForcedShipmentCreate() ?>;
-    var shipmentElement = $('invoice_do_shipment');
+    var shipmentElement = document.getElementById('invoice_do_shipment');
     if (forcedShipmentCreate && shipmentElement) {
         shipmentElement.checked = true;
         shipmentElement.disabled = true;
         document.getElementById('tracking').style.display = 'block';
     }
-//]]>
 </script>
