--- a/app/design/adminhtml/default/default/template/sales/order/view/history.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/view/history.phtml
@@ -62,6 +62,6 @@
     <?php endforeach ?>
     </ul>
     <script type="text/javascript">
-        if ($('order_status')) $('order_status').update('<?= $this->jsQuoteEscape($this->getOrder()->getStatusLabel()) ?>');
+        if (document.getElementById('order_status')) document.getElementById('order_status').textContent = '<?= $this->jsQuoteEscape($this->getOrder()->getStatusLabel()) ?>';
     </script>
 </div>
