--- a/app/design/adminhtml/default/default/template/bundle/product/edit/bundle/option/selection.phtml
+++ b/app/design/adminhtml/default/default/template/bundle/product/edit/bundle/option/selection.phtml
@@ -215,12 +215,12 @@ class BundleSelection {
 
         const inputs = document.querySelectorAll('#bundle_option_' + data.parentIndex + ' input');
         inputs.forEach(el => {
-            el.addEventListener('change', () => el.setHasChanges?.());
+            el.addEventListener('change', () => el.setHasChanges?.(el));
         });
 
         const deleteButtons = document.querySelectorAll('#bundle_option_' + data.parentIndex + ' button.delete');
         deleteButtons.forEach(el => {
-            el.addEventListener('click', () => el.setHasChanges?.());
+            el.addEventListener('click', () => el.setHasChanges?.(el));
         });
     }
 
