--- a/app/design/adminhtml/default/default/template/sales/order/create/form/account.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/create/form/account.phtml
@@ -18,5 +18,5 @@
     <div id="customer_account_fieds">
         <?= $this->getForm()->getHtml() ?>
     </div>
-    <script type="text/javascript">order.accountFieldsBind($('customer_account_fieds'))</script>
+    <script type="text/javascript">order.accountFieldsBind(document.getElementById('customer_account_fieds'))</script>
 </div>
