--- a/app/design/adminhtml/default/default/template/sales/order/shipment/view/tracking.phtml
+++ b/app/design/adminhtml/default/default/template/sales/order/shipment/view/tracking.phtml
@@ -60,16 +60,14 @@
 </table>
 </div>
 <script type="text/javascript">
-//<![CDATA[
 function selectCarrier(elem) {
     var option = elem.options[elem.selectedIndex];
-    $('tracking_title').value = option.value && option.value != 'custom' ? option.text : '';
+    document.getElementById('tracking_title').value = option.value && option.value != 'custom' ? option.text : '';
 }
 
 function deleteTrackingNumber(url) {
     if (confirm('<?= $this->jsQuoteEscape(Mage::helper('sales')->__('Are you sure?')) ?>')) {
-        submitAndReloadArea($('shipment_tracking_info').parentNode, url)
+        submitAndReloadArea(document.getElementById('shipment_tracking_info').parentNode, url)
     }
 }
-//]]>
 </script>
