--- a/app/design/install/default/default/template/install/config.phtml
+++ b/app/design/install/default/default/template/install/config.phtml
@@ -35,7 +35,7 @@
             </p>
         </li>
         <li>
-            <input type="checkbox" name="config[use_secure]" id="use_secure" value="1" <?php if($this->getFormData()->getUseSecure()): ?>checked="checked"<?php endif ?> onclick="this.checked ? $('use_secure_options').show() : $('use_secure_options').hide(); return true;" />
+            <input type="checkbox" name="config[use_secure]" id="use_secure" value="1" <?php if($this->getFormData()->getUseSecure()): ?>checked="checked"<?php endif ?> onclick="this.checked ? document.getElementById('use_secure_options').style.display = '' : document.getElementById('use_secure_options').style.display = 'none'; return true;" />
             <label for="use_secure"><?= $this->__('Use Secure URLs (SSL)') ?></label><br />
             <p style="margin-top:4px; line-height:1.3em; color:#666;">
                 <small><?= $this->__('Enable this option only if you have SSL available.') ?></small>
