--- a/app/design/adminhtml/default/default/template/customer/edit/js.phtml
+++ b/app/design/adminhtml/default/default/template/customer/edit/js.phtml
@@ -10,7 +10,7 @@
 ?>
 <script type="text/javascript">
 function saveAndContinueEdit(urlTemplate) {
-        var template = new Template(urlTemplate, /(^|.|\r|\n)({{(\w+)}})/);
+        var template = new Template(urlTemplate, Template.HANDLEBARS_PATTERN);
         var url = template.evaluate({tab_id:customer_info_tabsJsTabs.activeTab.id});
         editForm.submit(url);
 }
