--- a/app/design/adminhtml/default/default/template/catalog/product/edit/super/config.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/edit/super/config.phtml
@@ -59,7 +59,7 @@
     </div>
     <div class="values-container right">
         <label for="__id___label" class="bold"><?= Mage::helper('catalog')->__('Attribute Name:') ?></label>
-        <input id="__id___label" type="text" <?php if ($this->isAttributesConfigurationReadonly()): ?> disabled="disabled" <?php endif ?> class="input-text attribute-label required-entry template no-display" value="'{{label}}'" readonly="label" />
+        <input id="__id___label" type="text" <?php if ($this->isAttributesConfigurationReadonly()): ?> disabled="disabled" <?php endif ?> class="input-text attribute-label required-entry template no-display" value="{{label}}" readonly="label" />
         <input id="__id___label_use_default" type="checkbox" value="1" " checked="use_default" class="attribute-use-default-label">
         <label for="__id___label_use_default"><?= Mage::helper('catalog')->__('Use default') ?> ('{{store_label}}')</label>
         <ul class="attribute-values">
@@ -74,7 +74,7 @@
 <div class="attribute-values-container-main">
     <div class="attribute-values-container left">
     <?= Mage::helper('catalog')->__('Price:') ?>
-    <input id="__id___pricing" type="text" <?php if ($this->isAttributesPricesReadonly() || $this->getCanEditPrice() === false): ?> disabled="disabled" <?php endif ?> class="input-text attribute-price validate-number template no-display" value="'{{pricing_value}}'"/>
+    <input id="__id___pricing" type="text" <?php if ($this->isAttributesPricesReadonly() || $this->getCanEditPrice() === false): ?> disabled="disabled" <?php endif ?> class="input-text attribute-price validate-number template no-display" value="{{pricing_value}}"/>
 </div>
 <div class="attribute-values-container left">
     &nbsp;<select class="attribute-price-type" id="__id___price_type" <?php if ($this->isAttributesPricesReadonly() || $this->getCanEditPrice() === false): ?> disabled="disabled" <?php endif ?>>
