--- a/app/design/adminhtml/default/default/template/promo/js.phtml
+++ b/app/design/adminhtml/default/default/template/promo/js.phtml
@@ -5,13 +5,13 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
+ * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
 /** @var Mage_Adminhtml_Block_Promo_Catalog_Edit_Js $this */
 ?>
 <script type="text/javascript">
-//<![CDATA[
 function hideShowSubproductOptions()
 {
     if (document.getElementById('rule_sub_is_enable').value == 1) {
@@ -28,5 +28,4 @@ function hideShowSubproductOptions()
 }
 
 document.addEventListener('DOMContentLoaded', hideShowSubproductOptions);
-//]]>
 </script>
