--- a/app/design/adminhtml/default/default/template/system/variable/js.phtml
+++ b/app/design/adminhtml/default/default/template/system/variable/js.phtml
@@ -5,12 +5,11 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022 The OpenMage Contributors (https://openmage.org)
+ * @copyright   Copyright (c) 2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
 <script type="text/javascript">
-//<![CDATA[
-
 function toggleValueElement(element) {
     var disabled = false;
     if (element.value == 1) {
@@ -27,6 +26,4 @@ function toggleValueElement(element) {
         document.getElementById('html_value').classList.remove('disabled');
     }
 }
-
-//]]>
 </script>
