--- a/app/design/adminhtml/default/default/template/eav/attribute/options.phtml
+++ b/app/design/adminhtml/default/default/template/eav/attribute/options.phtml
@@ -74,12 +74,12 @@
                             <?php endif ?>
                         </th>
                     </tr>
-                    <tr class="no-display template" id="row-template">    
+                    <tr class="no-display template" id="row-template">
                         <?php if ($this->isConfigurableSwatchesEnabled()): ?>
                         <td style="position:relative">
                             <input type="hidden" disabled class="swatch-value" name="option[swatch][{{id}}]" value="{{swatch}}" />
-                            <input type="color" class="input-color-html5 validate-hex-color-hash {{swatch_class}}" value="{{swatch}}" />    
-                            <span class="swatch-delete" data-msg-delete="<?= $this->escapeHtml($this->__('Are you sure to delete this fallback color?')) ?>">X</span>
+                            <input type="color" class="input-color-html5 validate-hex-color-hash {{swatch_class}}" value="{{swatch}}" />
+                            <span class="swatch-delete" data-msg-delete="<?= $this->escapeHtml($this->__('Are you sure to delete this fallback color?')) ?>"><?= $this->getIconSvg('x') ?></span>
                         </td>
                         <?php endif ?>
                         <?php foreach ($this->getStores() as $_store): ?>
@@ -110,7 +110,7 @@ var templateText =
             '<td style="position:relative">'+
                 '<input type="hidden" disabled class="swatch-value" name="option[swatch][{{id}}]" value="{{swatch}}" />'+
                 '<input type="color" class="swatch-option input-color-html5 validate-hex-color-hash {{swatch_class}}" value="{{swatch}}" />'+
-                '<span class="swatch-delete" data-msg-delete="<?= $this->jsQuoteEscape($this->__('Are you sure to delete this fallback color?')) ?>">X</span>'+
+                '<span class="swatch-delete" data-msg-delete="<?= $this->jsQuoteEscape($this->__('Are you sure to delete this fallback color?')) ?>"><?= $this->getIconSvg('x') ?></span>'+
             '</td>'+
         <?php endif ?>
 <?php foreach ($this->getStores() as $_store): ?>
