--- a/app/design/adminhtml/default/default/template/eav/attribute/options.phtml
+++ b/app/design/adminhtml/default/default/template/eav/attribute/options.phtml
@@ -183,7 +183,9 @@ var attributeOption = {
         }
     },
     swatchremove : function(event){
-        if (!confirm(event.target.getAttribute('data-msg-delete'))) {
+        const deleteButton = event.target.closest('.swatch-delete');
+        const message = deleteButton ? deleteButton.getAttribute('data-msg-delete') : 'Are you sure you want to delete this swatch?';
+        if (!confirm(message)) {
             return;
         }
         let element = event.target.closest('tr');
