--- a/app/design/frontend/base/default/layout/tag.xml
+++ b/app/design/frontend/base/default/layout/tag.xml
@@ -50,8 +50,10 @@ Customer account home dashboard layout
     <catalog_product_view translate="label">
         <label>Catalog Product View</label>
          <!-- Mage_Tag -->
-        <reference name="product.info.additional">
-            <block type="tag/product_list" name="product_tag_list" before="-" template="tag/list.phtml">
+        <reference name="product.info">
+            <block type="tag/product_list" name="product_tag_list" template="tag/list.phtml">
+                <action method="addToParentGroup"><group>detailed_info</group></action>
+                <action method="setTitle" translate="value"><value>Tags</value></action>
                 <block type="page/html_wrapper" name="product.tag.list.list.before" as="list_before" translate="label">
                     <label>Tags List Before</label>
                     <action method="setMayBeInvisible"><value>1</value></action>
